==> apache/nuttx/arch/arm/src/stm32wb/stm32wb_i2c.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <inttypes.h>
#include <stdio.h>
#include <stdlib.h>
#include <stdint.h>
#include <stdbool.h>
#include <stddef.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/clock.h>
#include <nuttx/mutex.h>
#include <nuttx/semaphore.h>
#include <nuttx/kmalloc.h>
#include <nuttx/power/pm.h>
#include <nuttx/i2c/i2c_master.h>
#include <arch/board/board.h>
#include "arm_internal.h"
#include "stm32wb_gpio.h"
#include "stm32wb_rcc.h"
#include "stm32wb_i2c.h"
#include "stm32wb_waste.h"
#  define CONFIG_STM32WB_I2CTIMEOSEC 0
#  define CONFIG_STM32WB_I2CTIMEOMS  500   /* Default is 500 milliseconds */
#  define CONFIG_STM32WB_I2CTIMEOSEC 0     /* User provided milliseconds */
#  define CONFIG_STM32WB_I2CTIMEOMS  0     /* User provided seconds */
#  define CONFIG_STM32WB_I2CTIMEOTICKS \
    (SEC2TICK(CONFIG_STM32WB_I2CTIMEOSEC) + MSEC2TICK(CONFIG_STM32WB_I2CTIMEOMS))
#  define CONFIG_STM32WB_I2C_DYNTIMEO_STARTSTOP TICK2USEC(CONFIG_STM32WB_I2CTIMEOTICKS)
#define I2C_OUTPUT        (GPIO_OUTPUT | GPIO_FLOAT | GPIO_OPENDRAIN | \
                           GPIO_SPEED_50MHz | GPIO_OUTPUT_SET)
#define MKI2C_OUTPUT(p)   (((p) & (GPIO_PORT_MASK | GPIO_PIN_MASK)) | I2C_OUTPUT)
#define I2C_CR1_TXRX      (I2C_CR1_RXIE | I2C_CR1_TXIE)
#define I2C_CR1_ALLINTS   (I2C_CR1_TXRX | I2C_CR1_TCIE | I2C_CR1_ERRIE)
#  define stm32wb_i2c_tracereset(p)
#  define stm32wb_i2c_tracenew(p,s)

static inline
uint16_t stm32wb_i2c_getreg(struct stm32wb_i2c_priv_s *priv,
                            uint8_t offset)
{
  return getreg16(priv->config->base + offset);
}

static inline void stm32wb_i2c_putreg(struct stm32wb_i2c_priv_s *priv,
                                      uint8_t offset, uint16_t value)
{
  putreg16(value, priv->config->base + offset);
}

static int stm32wb_i2c_isr(int irq, void *context, void *arg)
{
  struct stm32wb_i2c_priv_s *priv = (struct stm32wb_i2c_priv_s *)arg;

  DEBUGASSERT(priv != NULL);
  return stm32wb_i2c_isr_process(priv);
}

static int stm32wb_i2c_init(struct stm32wb_i2c_priv_s *priv)
{
  /* Power-up and configure GPIOs */

  /* Enable power and reset the peripheral */

  modifyreg32(STM32WB_RCC_APB1ENR1, 0, priv->config->clk_bit);
  modifyreg32(STM32WB_RCC_APB1RSTR1, 0, priv->config->reset_bit);
  modifyreg32(STM32WB_RCC_APB1RSTR1, priv->config->reset_bit, 0);

  /* Configure pins */

  if (stm32wb_configgpio(priv->config->scl_pin) < 0)
    {
      return ERROR;
    }

  if (stm32wb_configgpio(priv->config->sda_pin) < 0)
    {
      stm32wb_unconfiggpio(priv->config->scl_pin);
      return ERROR;
    }

#ifndef CONFIG_I2C_POLLED
  /* Attach error and event interrupts to the ISRs */

  irq_attach(priv->config->ev_irq, stm32wb_i2c_isr, priv);
  irq_attach(priv->config->er_irq, stm32wb_i2c_isr, priv);
  up_enable_irq(priv->config->ev_irq);
  up_enable_irq(priv->config->er_irq);
#endif

  /* TODO:
   * - Provide means to set peripheral clock source via RCC_CCIPR_I2CxSEL
   * - Make clock source Kconfigurable (currently PCLK = 64MHz)
   */

  /* Force a frequency update */

  priv->frequency = 0;
  stm32wb_i2c_setclock(priv, 100000);

  /* Enable I2C peripheral */

  stm32wb_i2c_modifyreg32(priv, STM32WB_I2C_CR1_OFFSET, 0, I2C_CR1_PE);

  return OK;
}

static int stm32wb_i2c_deinit(struct stm32wb_i2c_priv_s *priv)
{
  /* Disable I2C */

  stm32wb_i2c_putreg32(priv, STM32WB_I2C_CR1_OFFSET, 0);

  /* Unconfigure GPIO pins */

  stm32wb_unconfiggpio(priv->config->scl_pin);
  stm32wb_unconfiggpio(priv->config->sda_pin);

#ifndef CONFIG_I2C_POLLED

  /* Disable and detach interrupts */

  up_disable_irq(priv->config->ev_irq);
  up_disable_irq(priv->config->er_irq);
  irq_detach(priv->config->ev_irq);
  irq_detach(priv->config->er_irq);
#endif

  /* Disable clocking */

  modifyreg32(STM32WB_RCC_APB1ENR1, priv->config->clk_bit, 0);

  return OK;
}

static int stm32wb_i2c_transfer(struct i2c_master_s *dev,
                                struct i2c_msg_s *msgs,
                                int count)
{
  int ret;

  /* Ensure that address or flags don't change meanwhile */

  ret = nxmutex_lock(&((struct stm32wb_i2c_inst_s *)dev)->priv->lock);
  if (ret >= 0)
    {
      ret = stm32wb_i2c_process(dev, msgs, count);
    }

  return ret;
}

struct i2c_master_s *stm32wb_i2cbus_initialize(int port)
{
  struct stm32wb_i2c_priv_s *priv = NULL;  /* private data of device with multiple instances */
  struct stm32wb_i2c_inst_s *inst = NULL;  /* device, single instance */

  /* Get I2C private structure */

  switch (port)
    {
#ifdef CONFIG_STM32WB_I2C1
      case 1:
        priv = (struct stm32wb_i2c_priv_s *)&stm32wb_i2c1_priv;
        break;
#endif
#ifdef CONFIG_STM32WB_I2C3
      case 3:
        priv = (struct stm32wb_i2c_priv_s *)&stm32wb_i2c3_priv;
        break;
#endif
      default:
        return NULL;
    }

  /* Allocate instance */

  if (!(inst = kmm_malloc(sizeof(struct stm32wb_i2c_inst_s))))
    {
      return NULL;
    }

  /* Initialize instance */

  inst->ops  = &stm32wb_i2c_ops;
  inst->priv = priv;

  /* Init private data for the first time, increment refs count,
   * power-up hardware and configure GPIOs.
   */

  nxmutex_lock(&priv->lock);
  if (priv->refs++ == 0)
    {
      stm32wb_i2c_init(priv);

#ifdef CONFIG_PM
      /* Register to receive power management callbacks */

      DEBUGVERIFY(pm_register(&priv->pm_cb));
#endif
    }

  nxmutex_unlock(&priv->lock);
  return (struct i2c_master_s *)inst;
}

int stm32wb_i2cbus_uninitialize(struct i2c_master_s *dev)
{
  struct stm32wb_i2c_priv_s *priv;

  DEBUGASSERT(dev);
  priv = ((struct stm32wb_i2c_inst_s *)dev)->priv;

  /* Decrement refs and check for underflow */

  if (priv->refs == 0)
    {
      return ERROR;
    }

  nxmutex_lock(&priv->lock);
  if (--priv->refs)
    {
      nxmutex_unlock(&priv->lock);
      kmm_free(dev);
      return OK;
    }

#ifdef CONFIG_PM
  /* Unregister power management callbacks */

  pm_unregister(&priv->pm_cb);
#endif

  /* Disable power and other HW resource (GPIO's) */

  stm32wb_i2c_deinit(priv);
  nxmutex_unlock(&priv->lock);

  kmm_free(dev);
  return OK;
}
